Fixed styling issue in invoice template and logo alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4833,6 +4833,12 @@ html {
   font-size: 9px;
   padding: 0 30px;
   margin: 0 0 30px; }
+
+.invoice-note {
+  color: black;
+  padding: 0 30px;
+  margin: 0 0 30px; }
+
 .report-copyrights img {
   display: inline-block;
   position: relative;
